test/test-cases/negative/lexical_errors.pas

Program lexical_errors(input, output);

// 3x 标识符错误
Var 3x,y: integer;
Begin
  z := 3;
  read(r, y)
End.
